client/src/components/Paginate/style.css
.paginate {
    display: flex;
    justify-content: center;
    align-items: center;
}

ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 2rem 0 0;
    padding: 0;
}

.paginate a {
    background-color: #322D39;
    padding: 0.5rem;
    margin: 0.1rem;
    color: var(--white);
    cursor: pointer;
    width: 24px;
    height: 24px;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

li:hover a{
    background-color: var(--honey);
    color: var(--darkBG);
}

li.selected a{
    background-color: var(--honey);
    color:var(--darkBG)
}

li.disabled {
    display: none;
}

li.previous a, li.next a{
    border-radius: 5px;
    border: none;
    height: unset;
    width: unset;
    padding: 0.5rem 1rem
}

/* Responsive style */

@media screen and (max-width:800px) {
    .next, .previous {
        display:none;
    }
}

